# milkdrop2020

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-build-android.sh  cmake-build-emscripten.sh  index.html  index.js  index.wasm  milkdrop.sln
MilkDropRunner/: MilkDropRunner.cpp  MilkDropRunner.rc  MilkDropRunner.vcxproj  MilkDropRunner.vcxproj.filters  Resource.h  stdafx.cpp
Milkdrop.xcodeproj/: project.pbxproj
Milkdrop.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
app/CommonApple/: CommonApple.h  CommonApple.mm  Visualizer.h  Visualizer.mm
app/MilkdropIcons.pxd/: metadata.info
app/MilkdropIcons.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
app/MilkdropIcons.pxd/data/: 0EA3768A-B018-48F2-B840-FBB13962254E  34D50AE5-D66F-4DE1-BE43-A8903AD6F23B  7AD0A72D-90D7-4CE5-A542-D9056D8AAC16  C11F20B6-9A83-465F-BC8F-0D03FA978A48-16071-000099A45969579C  E0BB0FC3-27D2-44B1-B124-8B9A8D62BC6E
app/OSX/: AppDelegate.h  AppDelegate.mm  GLView.h  GLView.mm  Info.plist  MetalView.mm  RenderViewControllerOSX.h  RenderViewControllerOSX.mm  console_main.mm  keycode_osx.h  keycode_osx.mm
app/OSX/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/OSX/Base.lproj/: Main.storyboard
app/Win32/: MilkDropRunner.cpp  ReadMe.txt  keycode_win32.cpp  keycode_win32.h  plugin.vcxproj  plugin.vcxproj.filters
app/android/: android_main.cpp  build.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  android_textureloader.cpp
app/android/app/src/main/java/com/android/milkdrop2/: MilkDropActivity.java  MilkDropLib.java  MilkDropView.java
app/android/app/src/main/res/values/: strings.xml
app/android/gradle/wrapper/: gradle-wrapper.properties
app/console/: main.cpp
app/emscripten/: Makefile  emscripten_main.cpp  emscripten_shell.html  shell_minimal.html
app/iOS/: AppDelegate.mm  ExternalViewController.h  ExternalViewController.mm  Info.plist  RenderViewControllerIOS.h  RenderViewControllerIOS.mm
app/iOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/iOS/Assets.xcassets/MilkdropAppLaunch.imageset/: Contents.json
app/iOS/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
app/ovr/: gradle.properties
app/ovr/app/: android.debug.keystore  build.gradle
app/ovr/app/src/main/: AndroidManifest.xml
app/ovr/app/src/main/cpp/: CMakeLists.txt  VrMilkDrop_NativeActivity.cpp  android_main.cpp
app/ovr/app/src/main/java/com/android/vrmilkdrop2/: MainActivity.java
app/ovr/gradle/wrapper/: gradle-wrapper.properties
app/tvOS/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  RenderViewControllerTVOS.h  RenderViewControllerTVOS.mm
app/tvOS/Base.lproj/: Main.storyboard
assets/audio/: audio.raw
assets/blacklist/: ! Test 1 - Flexi - 100% shader fractal [origami edit].milk
assets/data/: blur1.fx  blur2.fx  common.fxh  comp_vs.fx  custom_shapes.fx  fixed.fx  hdr.fx  imgui.fx  include.fx  output.fx  warp_vs.fx
assets/presets/: Goody + martin - crystal palace - Aqua Lumens.milk  Goody + martin - crystal palace - Ocular Anima.milk  ORB - Planetary Alignment.milk  ORB - Quicksand Lab.milk  ORB - Sandblade.milk  Standard.7z  martin - crystal palace.milk  martin - ludicrous speed.milk  readme.txt
assets/shaders/: output.fx  warp_fixed.fx
assets/www/: index.html  index.js  index2.html  index2.js  trace_viewer_full.html
src/: ArchiveReader.cpp  ArchiveReader.h  IVisualizer.h  IVizController.h  ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h  PresetBundle.cpp  PresetBundle.h  PresetInfo.h  StopWatch.h  TProfiler.cpp  TProfiler.h  VizController.cpp  VizController.h  common.h  imgui_support.cpp  imgui_support.h  json.h  matrix.cpp  matrix.h  path.cpp  path.h  platform.cpp  platform.h
src/audio/: ALAudioSource.cpp  AVAudioEngineSource.mm  CoreAudioSource.mm  IAudioSource.h  NullAudioSource.cpp  RawFileAudioSource.cpp  SLESAudioSource.cpp  Sample.h  SampleBuffer.h  UDPAudioSource.cpp  WavFileAudioSource.cpp  WaveInAudioSource.cpp
src/render/: AutoRef.h  context.cpp  context.h  context_d3d11.cpp  context_d3d9.cpp  context_gles.cpp  context_gles.h  context_metal.h  context_metal.mm  context_null.cpp
src/script/: script-tests.cpp  script.h
src/script/mdp-eel2/: script-caltab.cpp  script-codegenerator.h  script-compiler.cpp  script-compiler.h  script-context.cpp  script-context.h  script-eval.cpp  script-expression.cpp  script-expression.h  script-functions.h  script-functions.js  script-functype.cpp  script-functype.h  script-kernel-generated.cpp  script-kernel-generated.h  script-kernel.cpp  script-kernel.h  script-lextab.cpp  script-lextab.h  script-preprocessor.cpp  script-preprocessor.h  script-yycontext.h  script-yylex.cpp
src/vis_milk2/: AudioAnalyzer.cpp  IAudioAnalyzer.h  Vector.h  api.h  defines.h  dxcontext.cpp  fft.cpp  fft.h  md_defines.h  milkdrop_DX9.VS2010.sln  milkdropfs.cpp  plugin.cpp  plugin.h  plugin.vcxproj  plugin.vcxproj.filters  pluginshell.cpp  pluginshell.h  shell_defines.h  state.cpp  state.h  support.cpp  texmgr.cpp  utility.cpp  utility.h  vis.cpp
